--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ a:hover {
     background-color: #008CBA;
     border: 2px solid #008CBA;
     border-radius: 4px;
-    margin-left: 25px; 
+    margin-left: 25px;
     margin-top: 7px;
     padding: 5px 20px;
     transition-duration: 0.2s;
@@ -160,7 +160,7 @@ a:hover {
 }
 
 @-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
+    from {top:-300px; opacity:0}
     to {top:0; opacity:1}
 }
 
@@ -205,4 +205,8 @@ a:hover {
     width: 70%;
     margin: 0 auto;
     font-size: 75%;
+}
+
+.hidden {
+    display: none;
 }
