* switch to Bootstrap5

--- a/style.css
+++ b/style.css
@@ -19,203 +19,10 @@
 
 body {
 	font-family: Myriad Pro, sans-serif;
-    font-size: 150%;
-    font-weight: normal;
-    text-align: center;
-    background: url("images/gras.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-	   -moz-background-size: cover;
-		 -o-background-size: cover;
-			background-size: cover;
-    color: white;
+    font-size: 2vw;
+    overflow: hidden; /* Hide scrollbars */
 }
 
-h1 {
-    font-weight: lighter;
-}
-
-hr {
-	border: 0;
-	border-top: 2px solid white;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-    color: black;
-}
-
-td > div {
-    padding: 10px;
-}
-
-#main {
-    overflow: auto;
-	padding-bottom: 25px;
-    max-width: 85%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.pm {
-    font-size: 2em;
-    font-style: italic;
-}
-
-.text {
-    font-size: 0.6em;
-    font-weight: bold;
-}
-
-.aqi {
-    font-size: 18em;
-}
-
-#links {
-    text-align: left;
-    color: white;
-}
-
-#rechts {
-    text-align: right;
-    color: white;
-}
-
-#footer {
-    font-size: 70%;
-    font-style: italic;
-    text-align: left;
-}
-
-#copy {
-    color: white;
-    text-align: left;
-}
-
-#des {
-    font-style: italic;
-}
-
-#pad {
-    padding-right: 5px;
-}
-
-a:link {
-    color: white;
-}
-
-a:visited {
-    color: white;
-}
-
-a:hover {
-    color: grey;
-}
-
-.border td {
-    border: 1px solid grey;
-}
-
-.bg {
-    background-color: white;
-}
-
-#openInfo {
-    position: absolute;
-    border: none;
-    font: inherit;
-    font-size: 50%;
-    color: white;
-    background-color: #008CBA;
-    border: 2px solid #008CBA;
-    border-radius: 4px;
-    margin-left: 25px;
-    margin-top: 7px;
-    padding: 5px 20px;
-    transition-duration: 0.2s;
-}
-
-#openInfo:hover {
-    background-color: white;
-    color: black;
-}
-
-/* The Modal (background) */
-#infobox {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-#info-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-
-@-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-}
-
-@keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-}
-
-#close {
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-#close:hover,
-#close:focus {
-    color: #008CBA;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#info-header {
-    padding: 2px 16px;
-    background-color: #008CBA;
-    color: white;
-}
-
-#info-body {
-    padding: 2px 16px;
-    color: black;
-    width: 70%;
-    margin: 0 auto;
-}
-
-#info-footer {
-    padding: 10px 16px;
-    background-color: #008CBA;
-    color: white;
-}
-
-#actionextra {
-    width: 70%;
-    margin: 0 auto;
-    font-size: 75%;
-}
-
-.hidden {
-    display: none;
+.very-big {
+    font-size: 23vw;
 }
